EAN-2217: Fixed line wrapping issue

--- a/frontend/src/common/css/custom.css
+++ b/frontend/src/common/css/custom.css
@@ -1049,6 +1049,7 @@
     border: none;
     padding: 0.5rem 0;
     p {
+      text-wrap: auto;
       width: 100%;
     }
     p.govuk-hint {
